<resources>
    <string name="app_name">chatbot</string>
    <string name="vivekanand_education_society_s_institute_of_technology_an_autonomous_institute_affiliated_to_university_of_mumbai">Vivekanand Education Society\'s Institute of Technology An Autonomous Institute Affiliated to University of Mumbai</string>
    <string name="electronics_and_telecomm_engineering">Electronics and Telecomm Engineering</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_up">Sign up</string>
    <string name="new_user">New User?</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hint">hint</string>
</resources>