<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".splash">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="139dp"
        android:layout_height="222dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397"
        app:srcCompat="@drawable/logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="370dp"
        android:layout_height="120dp"
        android:fontFamily="@font/spartan_bold"
        android:gravity="center"
        android:text="@string/electronics_and_telecomm_engineering"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.707" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:layout_marginBottom="152dp"
        android:background="#ea7b47"

        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/vivekanand_education_society_s_institute_of_technology_an_autonomous_institute_affiliated_to_university_of_mumbai"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>